crates/lang/macro/tests/ui/trait_def/fail/message_output_non_codec.stderr
error[E0277]: the trait bound `NonCodec: WrapperTypeEncode` is not satisfied
  --> $DIR/message_output_non_codec.rs:8:26
   |
8  |     fn message(&self) -> NonCodec;
   |                          ^^^^^^^^ the trait `WrapperTypeEncode` is not implemented for `NonCodec`
   |
   = note: required because of the requirements on the impl of `Encode` for `NonCodec`
note: required by a bound in `DispatchOutput`
  --> $DIR/type_check.rs:69:8
   |
69 |     T: scale::Encode + 'static;
   |        ^^^^^^^^^^^^^ required by this bound in `DispatchOutput`

error[E0599]: the method `fire` exists for struct `CallBuilder<E, Set<<E as Environment>::AccountId>, Unset<u64>, Unset<<E as Environment>::Balance>, Set<ExecutionInput<ArgumentList<ArgumentListEnd, ArgumentListEnd>>>, Set<ReturnType<NonCodec>>>`, but its trait bounds were not satisfied
 --> $DIR/message_output_non_codec.rs:7:5
  |
3 |   pub struct NonCodec;
  |   -------------------- doesn't satisfy `NonCodec: parity_scale_codec::Decode`
...
7 | /     #[ink(message)]
8 | |     fn message(&self) -> NonCodec;
  | |__________________________________^ method cannot be called on `CallBuilder<E, Set<<E as Environment>::AccountId>, Unset<u64>, Unset<<E as Environment>::Balance>, Set<ExecutionInput<ArgumentList<ArgumentListEnd, ArgumentListEnd>>>, Set<ReturnType<NonCodec>>>` due to unsatisfied trait bounds
  |
  = note: the following trait bounds were not satisfied:
          `NonCodec: parity_scale_codec::Decode`
